--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 #title, #blank1, #blank2, #number, #wins, #losses, #crystal1, #crystal2, #crystal3, #crystal4, #scoretext, #scorenum {
-    border-style: solid;
-    border-color: red;
-    border-width: 2px;
     text-align: center;
+    
 }
 
+
 #header {
-    color: rgba(red, green, blue, alpha);
-    font-size: 20px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 #instructions {
-    color: darkblue;
+    color: white;
     font-weight: bold;
 }
 
@@ -24,11 +24,66 @@ body {
     height: 150px;
 }
 
-#crystal1, #crystal2, #crystal3, #crystal4 {
-    background-color: white;
-}
-
 #number {
 height: 50px;
 width: 50px;
+padding-top: 10px;
+padding-bottom: 10px;
+font-weight: bold;
+color: darkblue;
+border-style: solid;
+border-color: white;
+border-width: 2px;
+background-color: rgb(110, 191, 218);
+margin-bottom: 20px;
 }
+
+#wins, #losses, #currscore {
+    height: 50px;
+    width: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-weight: bold;  
+    color: white;
+    background-color: rgba(110, 191, 218, 0.425);
+    margin-bottom: 20px;
+}
+
+#scoretext {
+    font-weight: bold;
+    color: darkblue;
+    background-color: rgb(110, 191, 218);
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+}
+
+ 
+@media screen and (max-width: 768px) {
+ #number {
+     width: 750px;
+ }
+
+ #wins, #losses {
+     width: 50%;
+ }
+
+#boxes {
+    width: 50%;
+float: left;
+}
+
+ #crystal1, #crystal2, #crystal3, #crystal4 {
+     width: 100%;
+     /* height: 30%; */
+     /* margin-bottom: 0px;
+     margin-top: 0px; */
+     padding-right: 20px;
+     padding-bottom: 10px;
+ }
+
+ #currscore {
+     width: 100%;
+ }
+
+ 
